--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-modal-plugin",
+  "name": "react-modal-plugin-oc",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -19,32 +19,32 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0", 
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   },
 
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
 
   "main": "./dist/react-modal-plugin.umd.cjs",
   "module": "./dist/react-modal-plugin.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/react-modal-plugin.js",
       "require": "./dist/react-modal-plugin.umd.cjs"
     }
   },
-
   "files": [
     "dist"
   ],
 
-  "description": "A modal window plugin for React",
-  
+  "description": "A modal window plugin for React.",
+
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/JoshUrdnb/react-modal-plugin.git"
@@ -54,7 +54,9 @@
     "react",
     "modal",
     "confirmation",
-    "plugin"
+    "plugin",
+    "dialog",
+    "component"
   ],
 
   "author": "Joshua Urdanabia",
