feat: modification de la clé d'export modalPlugin.css
refactor : suppression des fichiers Hello World.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "import": "./dist/react-modal-plugin.js",
       "require": "./dist/react-modal-plugin.umd.cjs"
     },
-    "./dist/modalPlugin.css": "./dist/modalPlugin.css"
+    "./modalPlugin.css": "./dist/modalPlugin.css"
   },
   "files": [
     "dist"
